# asynchronous_messenger

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  messenger.db
Config/boost/: .gitkeep
Config/cmake/: .gitkeep
client/: CMakeLists.txt  client.cpp  client_connection.cpp  client_connection.h  client_state_machine.cpp  client_state_machine.h  client_ui.cpp  client_ui.h  debug_test.cpp  local_history_store.cpp  local_history_store.h  message_formatter.cpp  message_formatter.h  message_receiver.cpp
client/include/: client_ui.h  message_receiver.h
server/: CMakeLists.txt  database.cpp  json_parser.cpp  router.cpp  server.cpp  session.cpp  user_manager.cpp
server/include/: common.hpp  database.h  json_parser.h  router.h  session.h  user_manager.h
src/: CMakeLists.txt  client.cpp  database.cpp  json_parser.cpp  router.cpp  server.cpp  session.cpp  simple_test_client.cpp  user_manager.cpp
src/include/: common.hpp  database.hpp  json_parser.hpp  router.hpp  session.hpp  user_manager.hpp
